Make sure perms are set correctly for database

--- a/webhost_app/Dockerfile
+++ b/webhost_app/Dockerfile
@@ -5,3 +5,5 @@ COPY main.py /app/
 COPY requirements.txt /app/
 COPY uwsgi-app.ini /app/
 RUN pip3 install -U -r /app/requirements.txt
+
+RUN chown -R www-data:www-data /app/website/database
