fix network statements

--- a/webhost_app/docker-compose.yaml
+++ b/webhost_app/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8800:80"
 
-networks:
-  default:
-    external:
-      name: external_access
+# networks:
+#   default:
+#     external:
+#       name: external_access
